--- a/editor/arduino/src/debug.c.j2
+++ b/editor/arduino/src/debug.c.j2
@@ -144,16 +144,35 @@ void force_var(size_t idx, bool forced, void *val)
     }
 }
 
+void swap_bytes(void *ptr, size_t size) 
+{
+    uint8_t *bytePtr = (uint8_t *)ptr;
+    size_t i;
+    for (i = 0; i < size / 2; ++i) 
+    {
+        uint8_t temp = bytePtr[i];
+        bytePtr[i] = bytePtr[size - 1 - i];
+        bytePtr[size - 1 - i] = temp;
+    }
+}
+
 void trace_reset(void)
 {
-    for (size_t i=0; i < VAR_COUNT; i++) {
+    for (size_t i=0; i < VAR_COUNT; i++) 
+    {
         force_var(i, false, 0);
     }
 }
 
 void set_trace(size_t idx, bool forced, void *val)
 {
-    if (idx >= 0 && idx < VAR_COUNT) {
+    if (idx >= 0 && idx < VAR_COUNT) 
+    {
+        #ifdef __AVR__
+            // Aaaaarghhhh... Stupid AVR is Big Endian.
+            swap_bytes(val, get_var_size(idx));
+        #endif
+
         force_var(idx, forced, val);
     }
 }
