--- a/editor/arduino/src/debug.c.j2
+++ b/editor/arduino/src/debug.c.j2
@@ -23,6 +23,12 @@
 
 #include "iec_types_all.h"
 #include "POUS.h"
+
+#define SAME_ENDIANNESS      0
+#define REVERSE_ENDIANNESS   1
+
+uint8_t endianness;
+
 {% for v in debug.externs %}
 {{ v }}
 {%- endfor %}
@@ -168,12 +174,21 @@ void set_trace(size_t idx, bool forced, void *val)
 {
     if (idx >= 0 && idx < VAR_COUNT) 
     {
-        #ifdef __AVR__
+        if (endianness == REVERSE_ENDIANNESS)
+        {
             // Aaaaarghhhh... Stupid AVR is Big Endian.
             swap_bytes(val, get_var_size(idx));
-        #endif
+        }
 
         force_var(idx, forced, val);
+    }
+}
+
+void set_endianness(uint8_t value)
+{
+    if (value == SAME_ENDIANNESS || value == REVERSE_ENDIANNESS)
+    {
+        endianness = value;
     }
 }
 
