--- a/editor/arduino/src/debug.c.j2
+++ b/editor/arduino/src/debug.c.j2
@@ -116,13 +116,14 @@ void force_var(size_t idx, bool forced, void *val)
         case {{ t }}_O_ENUM: {
             memcpy((((__IEC_{{ t }}_p *) ptr)->value), val, var_size);
             //*(((__IEC_{{ t }}_p *) ptr)->value) = *(({{ t }} *) val);
+            ((__IEC_{{ t }}_p *) ptr)->flags |= __IEC_FORCE_FLAG;
+            break;
+        }
     {%- endif %}
     {%- if '{}_P_ENUM'.format(t) in debug.enums %}
         case {{ t }}_P_ENUM: {
             memcpy(&((__IEC_{{ t }}_p *) ptr)->fvalue, val, var_size);
             //((__IEC_{{ t }}_p *) ptr)->fvalue = *(({{ t }} *) val);
-    {%- endif %}
-    {%- if '{}_O_ENUM'.format(t) in debug.enums or '{}_P_ENUM'.format(t) in debug.enums %}
             ((__IEC_{{ t }}_p *) ptr)->flags |= __IEC_FORCE_FLAG;
             break;
         }
